--- a/RunTest.ipynb
+++ b/RunTest.ipynb
@@ -2,15 +2,214 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from Evaluator import evaluator\n",
+    "from SpellChecker import SpellChecker\n",
+    "\n",
+    "# Example usage of the updated SpellChecker class\n",
+    "def correct_text(test_sentence, correct_words_file):\n",
+    "    # Load the correct words from the provided file\n",
+    "    with open(correct_words_file, 'r', encoding='utf-8') as file:\n",
+    "        correct_words = [line.strip() for line in file]  # Strip newline characters\n",
+    "\n",
+    "    # Initialize the SpellChecker object with correct words\n",
+    "    spell_checker = SpellChecker(correct_words)\n",
+    "\n",
+    "    # Correct the test sentence\n",
+    "    corrected_text = spell_checker.correct(test_sentence)\n",
+    "    return corrected_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset...\n",
+      "Extracting words...\n",
+      "Saving words to /Users/divyanicassionprinston/Desktop/AI_project/WordList.txt...\n",
+      "Extracted 81188 words successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def load_dataset(file_path):\n",
+    "    if not Path(file_path).exists():\n",
+    "        raise FileNotFoundError(f\"Dataset not found at {file_path}\")\n",
+    "    return pd.read_csv(file_path)\n",
+    "\n",
+    "def extract_words_from_dataset(dataset):\n",
+    "    if 'text' not in dataset.columns:\n",
+    "        raise ValueError(\"Dataset does not contain 'text' column.\")\n",
+    "    all_words = []\n",
+    "    for text in dataset['text'].dropna():  # Handle missing text data\n",
+    "        words = extract_words_from_text(text)\n",
+    "        all_words.extend(words)\n",
+    "    return all_words\n",
+    "\n",
+    "def save_words_to_file(words, output_file):\n",
+    "    with open(output_file, 'w', encoding='utf-8') as file:\n",
+    "        for word in words:\n",
+    "            file.write(word + '\\n')\n",
+    "\n",
+    "def extract_words_from_text(text):\n",
+    "    text = re.sub(r'[0-9.,]', '', text)  # Remove digits and certain punctuation\n",
+    "    text = re.sub(r'[^஀-௿\\s]', '', text)  # Remove non-Tamil characters\n",
+    "    words = text.split()  # Split into words\n",
+    "    return words\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    dataset_path = r\"/Users/divyanicassionprinston/Desktop/AI_project/dataset.csv\" \n",
+    "    output_file = r\"/Users/divyanicassionprinston/Desktop/AI_project/WordList.txt\" \n",
+    "\n",
+    "    print(\"Loading dataset...\")\n",
+    "    dataset = load_dataset(dataset_path)\n",
+    "\n",
+    "    print(\"Extracting words...\")\n",
+    "    extracted_words = extract_words_from_dataset(dataset)\n",
+    "\n",
+    "    print(f\"Saving words to {output_file}...\")\n",
+    "    save_words_to_file(extracted_words, output_file)\n",
+    "\n",
+    "    print(f\"Extracted {len(extracted_words)} words successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Test Sentence 1: நம்முடய அன்றட நற்செயலள் கடவுளுக்குப் புகழ் சேர்த்தால், உயரமான இடத்தில் வைக்கப்பட்ட தீபமாக இருப்போம்\n",
+      "Corrected Text: நம்முடைய அன்று நற்பெயர் கடவுளுக்குள் புகழ் பார்த்தால் உயரமான இடத்தில் வைக்கப்பட்டு தீபம் இருப்போம்\n",
+      "\n",
+      "--- Evaluation Results ---\n",
+      "Accuracy: 0.2727272727272727\n",
+      "Precision: 0.2727272727272727\n",
+      "Recall: 1.0\n",
+      "Specificity: 0.0\n",
+      "F1-Score: 0.42857142857142855\n",
+      "\n",
+      "Test Sentence 2: இந ஆக்கத்துடன தொடர்புடைர்கள், உலகவிய பொதுப் பயனபாட்டுக்கு பதிப்புரமைச் சட்டததுக்கு உடட்டு, தங்கள் அனைத்துப பதிப்புரமைகளையும் விடுவித்துள்ளனர்\n",
+      "Corrected Text: இட சக்கரத்துடன் தொடர்பவர்கள் உலகளாவிய பொதுச் பாராட்டுக்கு மதிப்பும் லட்சத்துக்கு உண்டு தங்கள் அனைத்து பரிந்துரைகளும் விடுத்துள்ளார்\n",
+      "\n",
+      "--- Evaluation Results ---\n",
+      "Accuracy: 0.7692307692307693\n",
+      "Precision: 0.7692307692307693\n",
+      "Recall: 1.0\n",
+      "Specificity: 0.0\n",
+      "F1-Score: 0.8695652173913044\n",
+      "\n",
+      "Test Sentence 3: தமிழ், இந்தி உட்பட இலங்கை, சிங்கப்பூரில பேசப்படும் மொழிகளில் ஒன்ற\n",
+      "Corrected Text: தமிழ் இந்தி உட்பட இலங்கை சிங்கப்பூரில் பேசப்படும் மொழிகளில் என்ற\n",
+      "\n",
+      "--- Evaluation Results ---\n",
+      "Accuracy: 0.375\n",
+      "Precision: 0.375\n",
+      "Recall: 1.0\n",
+      "Specificity: 0.0\n",
+      "F1-Score: 0.5454545454545454\n",
+      "\n",
+      "Test Sentence 4: நிறைவுசெய்பவள என்று மொழிபெயர்க்கப்பட்டிருக்கும் (நீகெத்) என்ற எபிரெய சொல்லைக் குறித்த ஒரு பைபிள புலவர் இவ்வாற விளக்குகிறார்\n",
+      "Corrected Text: நிறைவுக்கு என்று மொழிபெயர்த்திருக்கும் நீக்க என்ற பிரிய சொல்லிக் குறித்த ஒரு பாபி பலர் இவ்வாறு விளங்குகிறார்\n",
+      "\n",
+      "--- Evaluation Results ---\n",
+      "Accuracy: 0.3076923076923077\n",
+      "Precision: 0.3076923076923077\n",
+      "Recall: 1.0\n",
+      "Specificity: 0.0\n",
+      "F1-Score: 0.47058823529411764\n",
+      "\n",
+      "Test Sentence 5: தமிழ ஒலி சார்ந்த மொழி, அதன் பலமும் பலவீனமும், ஒவ்வொர பிரதேசத தமிழர்களின் உச்சரிப்பு வேறுபடம\n",
+      "Corrected Text: தமிழ் ஒலி சார்ந்த மொழி அதன் பலரும் பலவீனம் ஒவ்வொரு பிரதேச தமிழர்களின் உச்சரித்து வேறுபாடு\n",
+      "\n",
+      "--- Evaluation Results ---\n",
+      "Accuracy: 0.3333333333333333\n",
+      "Precision: 0.3333333333333333\n",
+      "Recall: 1.0\n",
+      "Specificity: 0.0\n",
+      "F1-Score: 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# File containing the correct words\n",
+    "correct_words_file = \"/Users/divyanicassionprinston/Desktop/AI_project/WordList.txt\"\n",
+    "\n",
+    "# Test paragraphs with some incorrect sentences\n",
+    "test_paragraphs_list = [\n",
+    "    \"நம்முடய அன்றட நற்செயலள் கடவுளுக்குப் புகழ் சேர்த்தால், உயரமான இடத்தில் வைக்கப்பட்ட தீபமாக இருப்போம்.இந ஆக்கத்துடன தொடர்புடைர்கள், உலகவிய பொதுப் பயனபாட்டுக்கு பதிப்புரமைச் சட்டததுக்கு உடட்டு, தங்கள் அனைத்துப பதிப்புரமைகளையும் விடுவித்துள்ளனர்.தமிழ், இந்தி உட்பட இலங்கை, சிங்கப்பூரில பேசப்படும் மொழிகளில் ஒன்ற.நிறைவுசெய்பவள என்று மொழிபெயர்க்கப்பட்டிருக்கும் (நீகெத்) என்ற எபிரெய சொல்லைக் குறித்த ஒரு பைபிள புலவர் இவ்வாற விளக்குகிறார்.தமிழ ஒலி சார்ந்த மொழி, அதன் பலமும் பலவீனமும், ஒவ்வொர பிரதேசத தமிழர்களின் உச்சரிப்பு வேறுபடம.\"\n",
+    "]\n",
+    "\n",
+    "# Expected sentences for comparison\n",
+    "expected_paragraph = [\n",
+    "    \"நம்முடைய அன்றாட நற்செயல்கள் கடவுளுக்குப் புகழ் சேர்த்தால், உயரமான இடத்தில் வைக்கப்பட்ட தீபமாக இருப்போம்.இந்த ஆக்கத்துடன் தொடர்புடையவர்கள், உலகளளாவிய பொதுப் பயன்பாட்டுக்கு பதிப்புரிமைச் சட்டத்துக்கு உட்பட்டு, தங்கள் அனைத்துப் பதிப்புரிமைகளையும் விடுவித்துள்ளனர்.தமிழ், இந்தியா உட்பட இலங்கை, சிங்கப்பூரில் பேசப்படும் மொழிகளில் ஒன்று.நிறைவுசெய்பவள் என்று மொழிபெயர்க்கப்பட்டிருக்கும் (நீகெத்) என்ற எபிரெய சொல்லைக் குறித்து ஒரு பைபிள் புலவர் இவ்வாறு விளக்குகிறார்.தமிழ் ஒலி சார்ந்த மொழி, அதன் பலமும் பலவீனமும், ஒவ்வொரு பிரதேசத் தமிழர்களின் உச்சரிப்பு வேறுபடும்.\"\n",
+    "]\n",
+    "\n",
+    "# Function to split the text into sentences\n",
+    "def split_into_sentences(paragraphs):\n",
+    "    return [para.rstrip(\".\").split(\".\") for para in paragraphs]\n",
+    "\n",
+    "# Split the test and expected paragraphs into sentences\n",
+    "test_sentences = split_into_sentences(test_paragraphs_list)\n",
+    "expected_sentences = split_into_sentences(expected_paragraph)\n",
+    "\n",
+    "# Loop through test paragraphs and perform spell/grammar correction\n",
+    "for idx, test_sentences_group in enumerate(test_sentences):\n",
+    "\n",
+    "    for i, sentence in enumerate(test_sentences_group):\n",
+    "        print(f\"\\nTest Sentence {i+1}: {sentence.strip()}\")\n",
+    "\n",
+    "        # Correct the test sentence using the SpellChecker\n",
+    "        corrected_text = correct_text(sentence.strip(), correct_words_file)\n",
+    "\n",
+    "        # Output the corrected text\n",
+    "        print(f\"Corrected Text: {corrected_text.strip()}\")\n",
+    "\n",
+    "        # Evaluate the spell checker against the expected result\n",
+    "        print(\"\\n--- Evaluation Results ---\")\n",
+    "\n",
+    "        # Pass the individual sentences as arguments for evaluation\n",
+    "        evaluator(\n",
+    "            sentence.strip().split(), \n",
+    "            expected_sentences[idx][i].strip().split(), \n",
+    "            corrected_text.strip()\n",
+    "        )"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
